force-app/main/default/objects/Teams_Notification_Log__c/Teams_Notification_Log__c.object-meta.xml
<CustomObject>
    <description>Audit log for Teams webhook notifications sent from Salesforce.</description>
    <label>Teams Notification Log</label>
    <nameField>
        <displayFormat>LOG-{00000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teams Notification Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>