force-app/main/default/objects/Teams_Notification_Log__c/fields/Config_Name__c.field-meta.xml
<CustomField>
    <fullName>Config_Name__c</fullName>
    <description>The DeveloperName of the Custom Metadata configuration that triggered this notification.</description>
    <label>Config Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>