force-app/main/default/objects/Teams_Notification_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Error details if the webhook call failed.</description>
    <label>Error Message</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>