force-app/main/default/objects/Teams_Notification_Log__c/fields/Is_Success__c.field-meta.xml
<CustomField>
    <fullName>Is_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the webhook call was successful (2xx response).</description>
    <label>Is Success</label>
    <type>Checkbox</type>
</CustomField>