force-app/main/default/objects/Teams_Notification_Log__c/fields/Processing_Time_Ms__c.field-meta.xml
<CustomField>
    <fullName>Processing_Time_Ms__c</fullName>
    <description>How long the webhook callout took in milliseconds.</description>
    <label>Processing Time (ms)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>