force-app/main/default/objects/Teams_Notification_Log__c/fields/Request_Payload__c.field-meta.xml
<CustomField>
    <fullName>Request_Payload__c</fullName>
    <description>The JSON payload sent to the webhook.</description>
    <label>Request Payload</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>