force-app/main/default/objects/Teams_Notification_Log__c/fields/Response_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Response_Status_Code__c</fullName>
    <description>The HTTP status code returned by the webhook.</description>
    <label>Response Status Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>