force-app/main/default/objects/Teams_Notification_Log__c/fields/Sent_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Sent_DateTime__c</fullName>
    <description>The date and time when the notification was sent.</description>
    <label>Sent Date/Time</label>
    <type>DateTime</type>
</CustomField>