force-app/main/default/objects/Teams_Notification_Log__c/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <description>The API name of the object that triggered this notification.</description>
    <label>Source Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>