force-app/main/default/objects/Teams_Notification_Log__c/fields/Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Id__c</fullName>
    <description>The ID of the record that triggered this notification.</description>
    <externalId>true</externalId>
    <label>Source Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>