force-app/main/default/objects/Teams_Notification_Log__c/fields/Webhook_URL__c.field-meta.xml
<CustomField>
    <fullName>Webhook_URL__c</fullName>
    <description>The webhook URL that was called.</description>
    <label>Webhook URL</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>