force-app/main/default/objects/Teams_Notification_Log__c/listViews/All_Logs.listView-meta.xml
<ListView>
    <fullName>All_Logs</fullName>
    <columns>NAME</columns>
    <columns>Is_Success__c</columns>
    <columns>Source_Object__c</columns>
    <columns>Source_Record_Id__c</columns>
    <columns>Config_Name__c</columns>
    <columns>Action_Type__c</columns>
    <columns>Response_Status_Code__c</columns>
    <columns>Sent_DateTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Logs</label>
</ListView>