force-app/main/default/objects/Teams_Notification_Log__c/listViews/Failed_Notifications.listView-meta.xml
<ListView>
    <fullName>Failed_Notifications</fullName>
    <columns>NAME</columns>
    <columns>Source_Object__c</columns>
    <columns>Source_Record_Id__c</columns>
    <columns>Config_Name__c</columns>
    <columns>Response_Status_Code__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Sent_DateTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Success__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Failed Notifications</label>
</ListView>